Add knex migrations

--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "packageManager": "pnpm@8.15.8+sha512.d1a029e1a447ad90bc96cd58b0fad486d2993d531856396f7babf2d83eb1823bb83c5a3d0fc18f675b2d10321d49eb161fece36fe8134aa5823ecd215feed392",
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
-    "@types/bookshelf": "^1.2.9",
     "@types/express": "^5.0.0",
     "eslint": "^9.11.1",
     "nodemon": "^3.1.7",
@@ -27,12 +26,11 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "bookshelf": "^1.2.0",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.21.0",
     "knex": "^3.1.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "zod": "^3.23.8"
   }
 }
