--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,11 @@ services:
       - 3000:3000
   db:
     image: mysql:8
+    ports:
+      - 6033:3306
     environment:
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=envstockexchange
     volumes:
       - db-data:/var/lib/mysql
 
