--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
-    "extends": "@tsconfig/node20/tsconfig.json",
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"],
-    "compilerOptions": {
-      "allowJs": true,
-      "outDir": "dist"
-    }
+  "extends": "@tsconfig/node20/tsconfig.json",
+  "include": ["src/**/*", "config"],
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "allowJs": true,
+    "outDir": "dist",
   }
+}
