--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node src/main.js",
     "lint": "eslint src/** tests/** config/**",
     "prettier": "prettier src/ tests/ config/ --check",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "migrate": "knex migrate:latest",
+    "migrate:make": "knex migrate:make -x ts "
   },
   "keywords": [],
   "author": "",
