--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
     "eslint": "^9.11.1",
     "nodemon": "^3.1.7",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.9",
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.21.0",
