--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@types/morgan": "^1.9.9",
     "body-parser": "^1.20.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.21.0",
