--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.0",
+    "@types/qs": "^6.9.16",
     "eslint": "^9.11.1",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
@@ -32,6 +33,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@slack/bolt": "^3.22.0",
     "@types/morgan": "^1.9.9",
     "body-parser": "^1.20.3",
     "date-fns": "^4.1.0",
@@ -41,6 +43,7 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3",
+    "qs": "^6.13.0",
     "winston": "^3.14.2",
     "zod": "^3.23.8"
   }
